# TriangleManipulator

./: .gitignore  .gitmodules  CMakeLists.txt  TriangleManipulator  test.1.node
include/: earcut.hpp  flat_multimap.hpp
include/TriangleManipulator/: PointLocation.hpp  ShapeManipulator.hpp  TriangleManipulator.hpp  TriangleManipulatorTemplates.hpp
src/: PointLocation.cpp  PointLocation.hpp  ShapeManipulator.cpp  ShapeManipulator.hpp  TriangleManipulator.cpp  TriangleManipulator.hpp  TriangleManipulatorTemplates.hpp  test.cpp
